<resources>
    <string name="main_url">http://70.12.109.164:9090/NexQuick/</string>

    <string name="app_name">NexQuick</string>
    <string name="hintId">아이디를 입력하세요</string>
    <string name="hintPassword">비밀번호를 입력하세요</string>
    <string name="autoLogin">자동로그인</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="newOrder">새로운 주문</string>
    <string name="orderList">주문내역확인</string>
    <string name="updateUserInfo">회원정보수정</string>
    <string name="chatting">고객센터</string>
    <string name="title_activity_new_order">NewOrderActivity</string>
    <string name="tab_text_1">1단계</string>
    <string name="tab_text_2">2단계</string>
    <string name="tab_text_3">3단계</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_signup">회원가입</string>

    <!-- Strings related to login -->
    <string name="prompt_id">아이디</string>
    <string name="prompt_password">비밀번호</string>
    <string name="prompt_password_re">비밀번호 확인</string>
    <string name="action_sign_in">회원가입</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_csId">사용할 수 없는 아이디입니다.</string>
    <string name="error_valid_csId">사용 가능한 아이디입니다.</string>
    <string name="error_valid_password">사용 가능한 비밀번호입니다.</string>
    <string name="error_invalid_password">4자리 이상 입력해주세요.</string>
    <string name="error_incorrect_password">비밀번호가 다릅니다.</string>
    <string name="error_correct_password">비밀번호가 일치합니다.</string>
    <string name="error_field_required">반드시 입력해야합니다.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_username">이름</string>
    <string name="prompt_user_phone">전화번호</string>
    <string name="prompt_user_bname">법인명</string>
    <string name="prompt_user_bnum">사업자 등록번호</string>
    <string name="prompt_user_dept">부서</string>
    <string name="detail">상세보기</string>
    <string name="date">날짜</string>
    <string name="time">시간</string>
    <string name="setFavoriteInfo">이 배송지를 즐겨찾기로 저장</string>
    <string name="findAddress">주소찾기</string>
    <string name="prev">이전</string>
    <string name="next">다음</string>
    <string name="quick_detail_title">상세보기</string>
    <string name="blank_string" />
    <string name="favorite">즐겨찾기</string>
    <string name="chatbot">챗봇상담</string>
    <string name="tapconfirm_title">"TAP &#10; CONFIRM"</string>
    <string name="tapconfirm_desc">"퀵 인수/인도 확인입니다. 고객님의 폰 뒷면을 퀵프로님의 폰 뒷면과 탭해주세요. 자동로그인을 이용하시면 앱을 켜지 않고도 탭하실 수 있습니다."</string>
</resources>
