<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_order"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/newOrder" />
        <item
            android:id="@+id/nav_order_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/orderList" />
        <item
            android:id="@+id/insuindo"
            android:icon="@drawable/ic_menu_send"
            android:title="인수인도" />

        <item
            android:id="@+id/chatBot"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/chatbot" />
    </group>


    <item android:title="계정관리">
        <menu>
            <item
                android:id="@+id/userUpdate"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/updateUserInfo" />

            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_menu_send"
                android:title="로그아웃" />
        </menu>
    </item>

</menu>
