<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/receiverInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="출발지"
            android:textColor="@color/colorPrimary" />

        <Spinner
            android:id="@+id/senderAdressSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/receiverName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:hint="이름" />

            <EditText
                android:id="@+id/receiverPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:hint="연락처"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/receiverAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPostalAddress" />

            <Button
                android:id="@+id/receiverAddressBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                android:text="@string/findAddress" />
        </LinearLayout>

        <EditText
            android:id="@+id/receiverAddressDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress" />

        <CheckBox
            android:id="@+id/receiverSaveCbx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setFavoriteInfo" />

        <TextView
            android:id="@+id/freightInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="품목"
            android:textColor="@color/colorPrimary" />

        <Spinner
            android:id="@+id/freightSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/VehicleType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="운송수단"
            android:textColor="@color/colorPrimary" />



        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/bikeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="오토바이" />

            <RadioButton
                android:id="@+id/damas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="다마스" />

            <RadioButton
                android:id="@+id/rabo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="라보" />

            <RadioButton
                android:id="@+id/truck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1톤트럭" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/prev1p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_gravity="start"
                android:textColor="#ffffff"
                android:text="@string/prev" />

            <Button
                android:id="@+id/next3p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                android:layout_gravity="end"
                android:text="@string/next" />

        </LinearLayout>

    </LinearLayout>


</FrameLayout>